--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,18 +7,13 @@
             <h1><a href="/">Blog da Soloni</a></h1>
         </div>
 
-        <div>
-            <p>publicado: 01.08.2019, 19:55</p>
-            <h2><a href="">Ainda bem</a></h2>
-            <p>Ainda bem <br> Que você vive comigo <br> Porque senão <br> Como seria esta vida? <br> Sei lá, sei lá.</p>
-            <a href="https://www.letras.mus.br/vanessa-da-mata/102362/">link</a>
-        </div>
+        {% for post in posts %}
+          <div>
+            <p>published: {{ post.published_date }}</p>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+          </div>
+        {% endfor %}
 
-        <div>
-            <p>publicado: 01.08.2019, 20:00</p>
-            <h2><a href="">Dia especial</a></h2>
-            <p>Sonhei que as pessoas eram boas <br> Em um mundo de amor <br> E acordei nesse mundo marginal.</p>
-            <a href="https://www.letras.mus.br/cidadao-quem/45265/">link</a>
-        </div>
     </body>
 </html>
